syntax = "proto2";

package psd.client;

message Request {
	oneof msg {
		AuthReq auth = 1;
		OrderReq order = 2;
		Logout logout = 3;
		//...
	}
}

message Logout {
	// alguma coisa ?
}

message OrderReq {
	required string exchange = 1;
	required string company = 2;
	required int32 quantity = 3;
	required double unitPrice = 4;
	required Type type = 5;

	enum Type {
		SELL = 1;
		BUY = 2;
	}
}

message AuthReq {
	required string username = 1;
	required string password = 2;
}

message Reply {
	oneof msg {
		AuthRep auth = 1;
		InvalidRequest invReq = 2;
		Logout logout = 3;
		OrderRep order = 4;
		TradesRep tradesRep = 5;
		string error = 6;
		//...
	}
}

message InvalidRequest {
	// alguma coisa ?
}

message TradesRep {
	repeated Trade trades = 1;
}

message OrderRep {
	required string company = 1;
	required int32 quantity = 2;
	required double unitPrice = 3;
	required Type type = 4;
	repeated Trade trades = 5;

	enum Type {
		SELL = 1;
		BUY = 2;
	}
}

message Trade {
	required string seller = 1;
	required string buyer = 2;
	required string company = 3;
	required int32 quantity = 4;
	required double unitPrice = 5;
}

message AuthRep {
	required Status status = 1;

	enum Status {
		LOGIN = 1;
		REGISTER = 2;
		WRONG_PASSWORD = 3;
	}
}
